module_1(fix): try to fix burger menu bug on safari mobile devices

--- a/src/pages/main-layout-page/main-layout-page.module.scss
+++ b/src/pages/main-layout-page/main-layout-page.module.scss
@@ -12,7 +12,10 @@
 
 .mainLayout__wrapper--burgerOpen {
   height: 100dvh;
+  width: 100vw;
   overflow: hidden;
+  position: sticky;
+  top: 0;
 }
 
 .main {
